--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,183 +1,613 @@
-nav {
-	width: 960px;
-	margin: 0 auto;
+@media screen and (min-width: 980px) {
+	nav {
+		width: 960px;
+		margin: 0 auto;
+	}
+	header {
+		border-bottom: solid 2px #CCC;
+		background-color: #fff;
+	}
+	.name {
+		float: left;
+	}
+	.menu {
+		float: right;
+		margin-top: 30px;
+	}
+	.menu ul li {
+		float: left;
+		padding-left: 15px;
+		padding-right: 15px;
+		border-right: solid 1px #CCC;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 16px;
+		color: #777;
+	}
+	.menu ul li a {
+		text-decoration: none;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 16px;
+		color: #777;
+	}
+	.menu ul li a:hover {
+		color: #FF7F50;
+	}
+	.name h1 {
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		color: #fff;
+		padding: 20px 25px;
+	}
+	.name {
+		background-color: #4aaaa5;
+		margin-left: 40px;
+	}
+	.clear {
+		clear: both;
+	}
+	body {
+		background-color: #DDD;
+	}
+	.wrapper {
+		width: 960px;
+		margin: 0 auto;
+	}
+	.wrapper .about {
+		width: 580px;
+		background-color: #fff;
+		padding: 35px;
+		margin-top: 30px;
+		float: left;
+	}
+	.about h2 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		font-weight: bold;
+		padding-bottom: 20px;
+		margin-bottom: 25px;
+		border-bottom: solid 2px #CCC;
+	}
+	.about img {
+		float: left;
+		margin-right: 10px;
+	}
+	.about p {
+		color: #777;
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 16px;
+	}
+	.wrapper .social {
+		float: right;
+		width: 200px;
+		background-color: #fff;
+		padding: 35px;
+		margin-top: 30px;
+	}
+	.social h3 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 22px;
+		font-weight: bold;
+		padding-bottom: 20px;
+		margin-bottom: 25px;
+		border-bottom: solid 2px #CCC;
+	}
+	.social img {
+		margin-right: 25px;
+		float: left;
+	}
+	.wrapper .contact {
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 18px;
+		color: #777;
+		width: 580px;
+		background-color: #fff;
+		padding: 35px;
+		margin-top: 30px;
+		float: left;
+	}
+	.contact h2 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		font-weight: bold;
+		padding-bottom: 20px;
+		margin-bottom: 25px;
+		border-bottom: solid 2px #CCC;
+	}
+	.contact input {
+		width: 570px;
+	}
+	.contact textarea {
+		width: 570px;
+	}
+	.contact input[type="submit"] {
+		border: none;
+		background-color: #4aaaa5;
+		color: #fff;
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 18px;
+		padding: 10px 5px;
+		width: 120px;
+		margin-top: 15px;
+	}
+	.contact p {
+		padding: 0px;
+		margin: 12px 0px -10px 0px;
+	}
+	.wrapper .portfolio {
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 18px;
+		color: #777;
+		width: 580px;
+		background-color: #fff;
+		padding: 35px;
+		margin-top: 30px;
+		float: left;
+	}
+	.portfolio h2 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		font-weight: bold;
+		padding-bottom: 20px;
+		margin-bottom: 25px;
+		border-bottom: solid 2px #CCC;
+	}
+	.portfolio .container {
+		width: 270px;
+		height: 203px;
+		float: left;
+		margin-bottom: 30px;
+	}
+	.container img {
+		position: absolute;
+	}
+	.container .float {
+		width: 270px;
+		height: 50px;
+		background-color: #4aaaa5;
+		position: absolute;
+		margin-top: 110px;
+	}
+	.container h4 {
+		color: #fff;
+		font-family: "Times New Roman", Georgia, Serif;
+		font-size: 22px;
+		text-align: center;
+		margin-top: 12px;
+	}
+	footer {
+		background-color: #666;
+		border-top: solid 5px #4aaaa5;
+		height: 150px;
+		width: 100%;
+		position: fixed;
+		bottom: 0px;
+	}
+	footer p {
+		margin: 60px auto;
+		text-align: center;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		color: #CCC;
+	}
 }
-header {
-	border-bottom: solid 2px #CCC;
-	background-color: #fff;
+
+@media screen and (max-width: 979px) and (min-width: 768px) {
+	nav {
+		width: 768px;
+		margin: 0 auto;
+	}
+	header {
+		border-bottom: solid 2px #CCC;
+		background-color: #fff;
+	}
+	.name {
+		float: left;
+	}
+	.menu {
+		float: right;
+		margin-top: 30px;
+	}
+	.menu ul li {
+		float: left;
+		padding-left: 15px;
+		padding-right: 15px;
+		border-right: solid 1px #CCC;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 16px;
+		color: #777;
+	}
+	.menu ul li a {
+		text-decoration: none;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 16px;
+		color: #777;
+	}
+	.menu ul li a:hover {
+		color: #FF7F50;
+	}
+	.name h1 {
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		color: #fff;
+		padding: 20px 25px;
+	}
+	.name {
+		background-color: #4aaaa5;
+		margin-left: 40px;
+	}
+	.clear {
+		clear: both;
+	}
+	body {
+		background-color: #DDD;
+		overflow: auto;
+	}
+	.wrapper {
+		width: 768px;
+		margin: 0 auto;
+	}
+	.wrapper .about {
+		width: 658px;
+		background-color: #fff;
+		padding: 35px;
+		margin-top: 30px;
+		margin-left: 20px;
+		/*float: left;*/
+	}
+	.about h2 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		font-weight: bold;
+		padding-bottom: 10px;
+		margin-top: -15px;
+		margin-bottom: 15px;
+		border-bottom: solid 2px #CCC;
+	}
+	.about img {
+		float: left;
+		margin-right: 10px;
+	}
+	.about p {
+		color: #777;
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 16px;
+	}
+	.wrapper .social {
+		/*float: right;*/
+		width: 658px;
+		background-color: #fff;
+		padding: 35px;
+		padding-bottom: 80px;
+		margin-top: 20px;
+		margin-left: 20px;
+	}
+	.social h3 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 20px;
+		font-weight: bold;
+		padding-bottom: 10px;
+		margin-bottom: 15px;
+		margin-top: -18px;
+		border-bottom: solid 2px #CCC;
+	}
+	.social img {
+		margin-right: 25px;
+		float: left;
+	}
+	.wrapper .contact {
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 18px;
+		color: #777;
+		width: 658px;
+		background-color: #fff;
+		margin-left: 20px;
+		padding: 35px;
+		margin-top: 30px;
+		margin-bottom: 20px;
+		/*float: left;*/
+	}
+	.contact h2 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		font-weight: bold;
+		padding-bottom: 20px;
+		margin-bottom: 25px;
+		border-bottom: solid 2px #CCC;
+	}
+	.contact input {
+		width: 658px;
+	}
+	.contact textarea {
+		width: 658px;
+	}
+	.contact input[type="submit"] {
+		border: none;
+		background-color: #4aaaa5;
+		color: #fff;
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 18px;
+		padding: 10px 5px;
+		width: 120px;
+		margin-top: 15px;
+	}
+	.contact p {
+		padding: 0px;
+		margin: 12px 0px -10px 0px;
+	}
+	.wrapper .portfolio {
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 18px;
+		color: #777;
+		width: 658px;
+		background-color: #fff;
+		margin-left: 20px;
+		padding: 35px;
+		margin-top: 30px;
+		margin-bottom: 20px;
+		/*float: left;*/
+	}
+	.portfolio h2 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		font-weight: bold;
+		padding-bottom: 20px;
+		margin-bottom: 25px;
+		border-bottom: solid 2px #CCC;
+	}
+	.portfolio .container {
+		width: 270px;
+		height: 203px;
+		float: left;
+		margin-bottom: 30px;
+		margin-left: 23px;
+	}
+	.container img {
+		position: absolute;
+	}
+	.container .float {
+		width: 270px;
+		height: 50px;
+		background-color: #4aaaa5;
+		position: absolute;
+		margin-top: 110px;
+	}
+	.container h4 {
+		color: #fff;
+		font-family: "Times New Roman", Georgia, Serif;
+		font-size: 22px;
+		text-align: center;
+		margin-top: 12px;
+	}
+	footer {
+		clear: both;
+		background-color: #666;
+		border-top: solid 5px #4aaaa5;
+		height: 100px;
+		width: 100%;
+		padding-bottom: 100%;
+		margin-top: 30px;
+	}
+	footer p {
+		margin: 30px auto;
+		text-align: center;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		color: #CCC;
+	}
 }
-.name {
-	float: left;
-}
-.menu {
-	float: right;
-	margin-top: 30px;
-}
-.menu ul li {
-	float: left;
-	padding-left: 15px;
-	padding-right: 15px;
-	border-right: solid 1px #CCC;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 16px;
-	color: #777;
-}
-.menu ul li a {
-	text-decoration: none;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 16px;
-	color: #777;
-}
-.menu ul li a:hover {
-	color: #FF7F50;
-}
-.name h1 {
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-size: 28px;
-	color: #fff;
-	padding: 20px 25px;
-}
-.name {
-	background-color: #4aaaa5;
-	margin-left: 40px;
-}
-.clear {
-	clear: both;
-}
-body {
-	background-color: #DDD;
-}
-.wrapper {
-	width: 960px;
-	margin: 0 auto;
-}
-.wrapper .about {
-	width: 580px;
-	background-color: #fff;
-	padding: 35px;
-	margin-top: 30px;
-	float: left;
-}
-.about h2 {
-	color: #4aaaa5;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-size: 28px;
-	font-weight: bold;
-	padding-bottom: 20px;
-	margin-bottom: 25px;
-	border-bottom: solid 2px #CCC;
-}
-.about img {
-	float: left;
-	margin-right: 10px;
-}
-.about p {
-	color: #777;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 16px;
-}
-.wrapper .social {
-	float: right;
-	width: 200px;
-	background-color: #fff;
-	padding: 35px;
-	margin-top: 30px;
-}
-.social h3 {
-	color: #4aaaa5;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-size: 22px;
-	font-weight: bold;
-	padding-bottom: 20px;
-	margin-bottom: 25px;
-	border-bottom: solid 2px #CCC;
-}
-.social img {
-	margin-right: 25px;
-	float: left;
-}
-.wrapper .contact {
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
-	color: #777;
-	width: 580px;
-	background-color: #fff;
-	padding: 35px;
-	margin-top: 30px;
-	float: left;
-}
-.contact h2 {
-	color: #4aaaa5;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-size: 28px;
-	font-weight: bold;
-	padding-bottom: 20px;
-	margin-bottom: 25px;
-	border-bottom: solid 2px #CCC;
-}
-.contact input {
-	width: 570px;
-}
-.contact textarea {
-	width: 570px;
-}
-.contact p {
-	padding: 0px;
-	margin: 12px 0px -10px 0px;
-}
-.wrapper .portfolio {
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
-	color: #777;
-	width: 580px;
-	background-color: #fff;
-	padding: 35px;
-	margin-top: 30px;
-	float: left;
-}
-.portfolio h2 {
-	color: #4aaaa5;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-size: 28px;
-	font-weight: bold;
-	padding-bottom: 20px;
-	margin-bottom: 25px;
-	border-bottom: solid 2px #CCC;
-}
-.portfolio .container {
-	width: 270px;
-	height: 203px;
-	float: left;
-	margin-bottom: 30px;
-}
-.container img {
-	position: fixed;
-}
-.container .float {
-	width: 270px;
-	height: 50px;
-	background-color: #4aaaa5;
-	position: absolute;
-	margin-top: 110px;
-}
-.container h4 {
-	color: #fff;
-	font-family: "Times New Roman", Georgia, Serif;
-	font-size: 22px;
-	text-align: center;
-	margin-top: 12px;
-}
-footer {
-	background-color: #666;
-	border-top: solid 5px #4aaaa5;
-	height: 150px;
-	width: 100%;
-	position: fixed;
-	bottom: 0px;
-}
-footer p {
-	margin: 60px auto;
-	text-align: center;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	color: #CCC;
+
+@media screen and (max-width: 767px) {
+	nav {
+		width: 640px;
+		margin: 0 auto;
+	}
+	header {
+		border-bottom: solid 2px #CCC;
+		background-color: #fff;
+		padding-bottom: 5px;
+	}
+	.menu {
+		width: 640px;
+		margin-top: 8px;
+		margin-left: 20px;
+	}
+	.menu ul li {
+		float: left;
+		padding-left: 70px;
+		padding-right: 70px;
+		border-right: solid 1px #CCC;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 16px;
+		color: #777;
+	}
+	.menu ul li a {
+		text-decoration: none;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 16px;
+		color: #777;
+	}
+	.menu ul li a:hover {
+		color: #FF7F50;
+	}
+	.name h1 {
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		color: #fff;
+		text-align: center;
+		padding: 15px 0;
+	}
+	.name {
+		background-color: #4aaaa5;
+		width: 640px;
+	}
+	.clear {
+		clear: both;
+	}
+	body {
+		background-color: #DDD;
+		overflow: auto;
+	}
+	.wrapper {
+		width: 640px;
+		margin: 0 auto;
+	}
+	.wrapper .about {
+		width: 543px;
+		background-color: #fff;
+		padding: 35px;
+		margin-top: 20px;
+		margin-left: 15px;
+		/*float: left;*/
+	}
+	.about h2 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 24px;
+		font-weight: bold;
+		padding-bottom: 10px;
+		margin-top: -15px;
+		margin-bottom: 15px;
+		border-bottom: solid 2px #CCC;
+	}
+	.about img {
+		float: left;
+		margin-right: 10px;
+	}
+	.about p {
+		color: #777;
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 16px;
+	}
+	.wrapper .social {
+		/*float: right;*/
+		width: 543px;
+		background-color: #fff;
+		padding: 35px;
+		padding-bottom: 80px;
+		margin-top: 20px;
+		margin-left: 15px;
+	}
+	.social h3 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 20px;
+		font-weight: bold;
+		padding-bottom: 10px;
+		margin-bottom: 15px;
+		margin-top: -18px;
+		border-bottom: solid 2px #CCC;
+	}
+	.social img {
+		margin-right: 25px;
+		float: left;
+	}
+	.wrapper .contact {
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 18px;
+		color: #777;
+		width: 543px;
+		background-color: #fff;
+		margin-left: 15px;
+		padding: 35px;
+		margin-top: 30px;
+		margin-bottom: 20px;
+		/*float: left;*/
+	}
+	.contact h2 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		font-weight: bold;
+		padding-bottom: 20px;
+		margin-bottom: 25px;
+		border-bottom: solid 2px #CCC;
+	}
+	.contact input {
+		width: 543px;
+	}
+	.contact textarea {
+		width: 543px;
+	}
+	.contact input[type="submit"] {
+		border: none;
+		background-color: #4aaaa5;
+		color: #fff;
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 18px;
+		padding: 10px 5px;
+		width: 120px;
+		margin-top: 15px;
+	}
+	.contact p {
+		padding: 0px;
+		margin: 12px 0px -10px 0px;
+	}
+	.wrapper .portfolio {
+		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 18px;
+		color: #777;
+		width: 543px;
+		background-color: #fff;
+		margin-left: 15px;
+		padding: 35px;
+		margin-top: 30px;
+		margin-bottom: 20px;
+		/*float: left;*/
+	}
+	.portfolio h2 {
+		color: #4aaaa5;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		font-size: 28px;
+		font-weight: bold;
+		padding-bottom: 20px;
+		margin-bottom: 25px;
+		border-bottom: solid 2px #CCC;
+	}
+	.portfolio .container {
+		width: 250px;
+		height: 183px;
+		float: left;
+		margin-bottom: 30px;
+		
+	}
+	.container img {
+		position: absolute;
+		width: 250px;
+		height: 183px;
+	}
+	.container .float {
+		width: 250px;
+		height: 40px;
+		background-color: #4aaaa5;
+		position: absolute;
+		margin-top: 110px;
+	}
+	.container h4 {
+		color: #fff;
+		font-family: "Times New Roman", Georgia, Serif;
+		font-size: 22px;
+		text-align: center;
+		margin-top: 12px;
+	}
+	footer {
+		clear: both;
+		background-color: #666;
+		border-top: solid 5px #4aaaa5;
+		height: 100px;
+		width: 100%;
+		padding-bottom: 100%;
+		margin-top: 30px;
+	}
+	footer p {
+		margin: 30px auto;
+		text-align: center;
+		font-family: 'Georgia', Times, Times New Roman, serif;
+		color: #CCC;
+	}
 }
