--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,613 +1,297 @@
+body {
+	background-color: #DDD;
+}
+html, body {
+    height: 100%;
+}
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -90px; /* the bottom margin is the negative value of the footer's height */
+}
+.push {
+    height: 90px; /* .push must be the same height as .footer */
+}
+header {
+	width: 100%;
+	background-color: #fff;
+}
+footer {
+	clear: both;
+	background-color: #666;
+	border-top: solid 5px #4aaaa5;
+	width: 100%;
+	height: 85px;
+}
+footer p {
+	margin: 30px auto;
+	text-align: center;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #CCC;
+}
+.name {
+	float: left;
+}
+.menu {
+	float: right;
+	margin-top: 30px;
+}
+.menu ul li {
+	float: left;
+	padding-left: 15px;
+	padding-right: 15px;
+	border-right: solid 1px #CCC;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 16px;
+	color: #777;
+}
+.menu ul li a {
+	text-decoration: none;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 16px;
+	color: #777;
+}
+.menu ul li a:hover {
+	color: #FF7F50;
+}
+.name h1 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 28px;
+	color: #fff;
+	padding: 20px 25px;
+}
+.name {
+	background-color: #4aaaa5;
+	margin-left: 40px;
+}
+.clear {
+	clear: both;
+}
+
+.about {
+	width: 60%;
+	background-color: #fff;
+	padding: 35px;
+	margin-top: 30px;
+	float: left;
+}
+.about h2 {
+	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 28px;
+	font-weight: bold;
+	padding-bottom: 20px;
+	margin-bottom: 25px;
+	border-bottom: solid 2px #CCC;
+}
+.about img {
+	float: left;
+	margin-right: 10px;
+}
+.about p {
+	color: #777;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 16px;
+}
+.contact {
+	width: 60%;
+	background-color: #fff;
+	padding: 35px;
+	margin-top: 30px;
+	float: left;
+}
+.contact h2 {
+	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 28px;
+	font-weight: bold;
+	padding-bottom: 20px;
+	margin-bottom: 25px;
+	border-bottom: solid 2px #CCC;
+}
+.contact input {
+	width: 100%;
+}
+.contact textarea {
+	width: 100%;
+}
+.contact input[type="submit"] {
+	border: none;
+	background-color: #4aaaa5;
+	color: #fff;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 18px;
+	padding: 10px 5px;
+	width: 120px;
+	margin-top: 15px;
+}
+.contact p {
+	padding: 0px;
+	margin: 12px 0px -10px 0px;
+}
+.portfolio {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 18px;
+	color: #777;
+	width: 60%;
+	background-color: #fff;
+	padding: 35px;
+	padding-bottom: 15px;
+	margin-top: 30px;
+	margin-bottom: 10px;
+	float: left;
+}
+.portfolio h2 {
+	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 28px;
+	font-weight: bold;
+	padding-bottom: 20px;
+	margin-bottom: 25px;
+	border-bottom: solid 2px #CCC;
+}
+.portfolio .container {
+	width: 49%;
+	height: auto;
+	margin-bottom: 7%;
+}
+.container img {
+	width: 100%;
+	height: auto;
+}
+.container .float {
+	width: 100%;
+	height: 44px;
+	padding-top: 6px;
+	background-color: #4aaaa5;
+	position: relative;
+	margin-top: -80px;
+}
+.container h4 {
+	color: #fff;
+	font-family: "Times New Roman", Georgia, Serif;
+	font-size: 22px;
+	text-align: center;
+	margin-top: 12px;
+}
+.social {
+	float: right;
+	width: 23%;
+	background-color: #fff;
+	padding: 35px;
+	margin-top: 30px;
+}
+.social h3 {
+	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 22px;
+	font-weight: bold;
+	padding-bottom: 20px;
+	margin-bottom: 25px;
+	border-bottom: solid 2px #CCC;
+}
+.social img {
+	margin-right: 25px;
+	float: left;
+}
+.center {
+	margin: 0 auto;
+	width: 200px;
+}
 @media screen and (min-width: 980px) {
 	nav {
-		width: 960px;
+		max-width: 960px;
 		margin: 0 auto;
 	}
-	header {
-		border-bottom: solid 2px #CCC;
-		background-color: #fff;
-	}
-	.name {
-		float: left;
-	}
-	.menu {
-		float: right;
-		margin-top: 30px;
-	}
-	.menu ul li {
-		float: left;
-		padding-left: 15px;
-		padding-right: 15px;
-		border-right: solid 1px #CCC;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 16px;
-		color: #777;
-	}
-	.menu ul li a {
-		text-decoration: none;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 16px;
-		color: #777;
-	}
-	.menu ul li a:hover {
-		color: #FF7F50;
-	}
-	.name h1 {
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		color: #fff;
-		padding: 20px 25px;
-	}
-	.name {
-		background-color: #4aaaa5;
-		margin-left: 40px;
-	}
-	.clear {
-		clear: both;
-	}
-	body {
-		background-color: #DDD;
-	}
-	.wrapper {
-		width: 960px;
+	main {
+		max-width: 960px;
 		margin: 0 auto;
-	}
-	.wrapper .about {
-		width: 580px;
-		background-color: #fff;
-		padding: 35px;
-		margin-top: 30px;
-		float: left;
-	}
-	.about h2 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		font-weight: bold;
-		padding-bottom: 20px;
-		margin-bottom: 25px;
-		border-bottom: solid 2px #CCC;
-	}
-	.about img {
-		float: left;
-		margin-right: 10px;
-	}
-	.about p {
-		color: #777;
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 16px;
-	}
-	.wrapper .social {
-		float: right;
-		width: 200px;
-		background-color: #fff;
-		padding: 35px;
-		margin-top: 30px;
-	}
-	.social h3 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 22px;
-		font-weight: bold;
-		padding-bottom: 20px;
-		margin-bottom: 25px;
-		border-bottom: solid 2px #CCC;
-	}
-	.social img {
-		margin-right: 25px;
-		float: left;
-	}
-	.wrapper .contact {
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 18px;
-		color: #777;
-		width: 580px;
-		background-color: #fff;
-		padding: 35px;
-		margin-top: 30px;
-		float: left;
-	}
-	.contact h2 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		font-weight: bold;
-		padding-bottom: 20px;
-		margin-bottom: 25px;
-		border-bottom: solid 2px #CCC;
-	}
-	.contact input {
-		width: 570px;
-	}
-	.contact textarea {
-		width: 570px;
-	}
-	.contact input[type="submit"] {
-		border: none;
-		background-color: #4aaaa5;
-		color: #fff;
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 18px;
-		padding: 10px 5px;
-		width: 120px;
-		margin-top: 15px;
-	}
-	.contact p {
-		padding: 0px;
-		margin: 12px 0px -10px 0px;
-	}
-	.wrapper .portfolio {
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 18px;
-		color: #777;
-		width: 580px;
-		background-color: #fff;
-		padding: 35px;
-		margin-top: 30px;
-		float: left;
-	}
-	.portfolio h2 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		font-weight: bold;
-		padding-bottom: 20px;
-		margin-bottom: 25px;
-		border-bottom: solid 2px #CCC;
-	}
-	.portfolio .container {
-		width: 270px;
-		height: 203px;
-		float: left;
-		margin-bottom: 30px;
-	}
-	.container img {
-		position: absolute;
-	}
-	.container .float {
-		width: 270px;
-		height: 50px;
-		background-color: #4aaaa5;
-		position: absolute;
-		margin-top: 110px;
-	}
-	.container h4 {
-		color: #fff;
-		font-family: "Times New Roman", Georgia, Serif;
-		font-size: 22px;
-		text-align: center;
-		margin-top: 12px;
-	}
-	footer {
-		background-color: #666;
-		border-top: solid 5px #4aaaa5;
-		height: 150px;
-		width: 100%;
-		position: fixed;
-		bottom: 0px;
-	}
-	footer p {
-		margin: 60px auto;
-		text-align: center;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		color: #CCC;
 	}
 }
 
 @media screen and (max-width: 979px) and (min-width: 768px) {
 	nav {
-		width: 768px;
+		max-width: 960px;
+		min-width: 768px;
 		margin: 0 auto;
 	}
-	header {
-		border-bottom: solid 2px #CCC;
-		background-color: #fff;
-	}
-	.name {
-		float: left;
+	main {
+		max-width: 960px;
+		min-width: 768px;
+		margin: 0 auto;
 	}
 	.menu {
-		float: right;
-		margin-top: 30px;
+		margin-right: 3%;
 	}
-	.menu ul li {
-		float: left;
-		padding-left: 15px;
-		padding-right: 15px;
-		border-right: solid 1px #CCC;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 16px;
-		color: #777;
-	}
-	.menu ul li a {
-		text-decoration: none;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 16px;
-		color: #777;
-	}
-	.menu ul li a:hover {
-		color: #FF7F50;
-	}
-	.name h1 {
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		color: #fff;
-		padding: 20px 25px;
-	}
-	.name {
-		background-color: #4aaaa5;
-		margin-left: 40px;
-	}
-	.clear {
+	.about {
+		width: 85%;
 		clear: both;
+		margin-left:3%;
 	}
-	body {
-		background-color: #DDD;
-		overflow: auto;
-	}
-	.wrapper {
-		width: 768px;
-		margin: 0 auto;
-	}
-	.wrapper .about {
-		width: 658px;
-		background-color: #fff;
-		padding: 35px;
-		margin-top: 30px;
-		margin-left: 20px;
-		/*float: left;*/
-	}
-	.about h2 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		font-weight: bold;
-		padding-bottom: 10px;
-		margin-top: -15px;
-		margin-bottom: 15px;
-		border-bottom: solid 2px #CCC;
-	}
-	.about img {
-		float: left;
-		margin-right: 10px;
-	}
-	.about p {
-		color: #777;
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 16px;
-	}
-	.wrapper .social {
-		/*float: right;*/
-		width: 658px;
-		background-color: #fff;
-		padding: 35px;
-		padding-bottom: 80px;
-		margin-top: 20px;
-		margin-left: 20px;
-	}
-	.social h3 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 20px;
-		font-weight: bold;
-		padding-bottom: 10px;
-		margin-bottom: 15px;
-		margin-top: -18px;
-		border-bottom: solid 2px #CCC;
-	}
-	.social img {
-		margin-right: 25px;
-		float: left;
-	}
-	.wrapper .contact {
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 18px;
-		color: #777;
-		width: 658px;
-		background-color: #fff;
-		margin-left: 20px;
-		padding: 35px;
-		margin-top: 30px;
-		margin-bottom: 20px;
-		/*float: left;*/
-	}
-	.contact h2 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		font-weight: bold;
-		padding-bottom: 20px;
-		margin-bottom: 25px;
-		border-bottom: solid 2px #CCC;
-	}
-	.contact input {
-		width: 658px;
-	}
-	.contact textarea {
-		width: 658px;
-	}
-	.contact input[type="submit"] {
-		border: none;
-		background-color: #4aaaa5;
-		color: #fff;
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 18px;
-		padding: 10px 5px;
-		width: 120px;
-		margin-top: 15px;
-	}
-	.contact p {
-		padding: 0px;
-		margin: 12px 0px -10px 0px;
-	}
-	.wrapper .portfolio {
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 18px;
-		color: #777;
-		width: 658px;
-		background-color: #fff;
-		margin-left: 20px;
-		padding: 35px;
-		margin-top: 30px;
-		margin-bottom: 20px;
-		/*float: left;*/
-	}
-	.portfolio h2 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		font-weight: bold;
-		padding-bottom: 20px;
-		margin-bottom: 25px;
-		border-bottom: solid 2px #CCC;
-	}
-	.portfolio .container {
-		width: 270px;
-		height: 203px;
-		float: left;
-		margin-bottom: 30px;
-		margin-left: 23px;
-	}
-	.container img {
-		position: absolute;
-	}
-	.container .float {
-		width: 270px;
-		height: 50px;
-		background-color: #4aaaa5;
-		position: absolute;
-		margin-top: 110px;
-	}
-	.container h4 {
-		color: #fff;
-		font-family: "Times New Roman", Georgia, Serif;
-		font-size: 22px;
-		text-align: center;
-		margin-top: 12px;
-	}
-	footer {
+	.contact {
+		width: 85%;
 		clear: both;
-		background-color: #666;
-		border-top: solid 5px #4aaaa5;
-		height: 100px;
-		width: 100%;
-		padding-bottom: 100%;
-		margin-top: 30px;
+		margin-left:3%;
 	}
-	footer p {
-		margin: 30px auto;
-		text-align: center;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		color: #CCC;
+	.portfolio {
+		width: 85%;
+		clear: both;
+		margin-left:3%;
+	}
+	.social {
+		width: 85%;
+		float: left;
+		margin-left:3%;
+		margin-bottom: 10px;
 	}
 }
 
 @media screen and (max-width: 767px) {
 	nav {
-		width: 640px;
+		max-width: 765px;
+		min-width: 340px;
 		margin: 0 auto;
 	}
-	header {
-		border-bottom: solid 2px #CCC;
-		background-color: #fff;
-		padding-bottom: 5px;
+	main {
+		max-width: 765px;
+		min-width: 340px;
+		margin: 0 auto;
 	}
 	.menu {
-		width: 640px;
-		margin-top: 8px;
-		margin-left: 25px;
+		margin-right: 3%;
 	}
-	.menu ul li {
+	.about {
+		width: 84%;
+		clear: both;
+		margin-left:3%;
+	}
+	.contact {
+		width: 84%;
+		clear: both;
+		margin-left:3%;
+	}
+	.portfolio {
+		width: 84%;
+		clear: both;
+		margin-left:3%;
+	}
+	.social {
+		width: 84%;
 		float: left;
-		padding-left: 70px;
-		padding-right: 70px;
-		border-right: solid 1px #CCC;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 16px;
-		color: #777;
-	}
-	.menu ul li a {
-		text-decoration: none;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 16px;
-		color: #777;
-	}
-	.menu ul li a:hover {
-		color: #FF7F50;
-	}
-	.name h1 {
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		color: #fff;
-		text-align: center;
-		padding: 15px 0;
+		margin-left:3%;
+		margin-bottom: 10px;
 	}
 	.name {
-		background-color: #4aaaa5;
-		width: 640px;
-	}
-	.clear {
 		clear: both;
-	}
-	body {
-		background-color: #DDD;
-		overflow: auto;
-	}
-	.wrapper {
-		width: 640px;
-		margin: 0 auto;
-	}
-	.wrapper .about {
-		width: 543px;
-		background-color: #fff;
-		padding: 35px;
-		margin-top: 20px;
-		margin-left: 15px;
-		/*float: left;*/
-	}
-	.about h2 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 24px;
-		font-weight: bold;
-		padding-bottom: 10px;
-		margin-top: -15px;
-		margin-bottom: 15px;
-		border-bottom: solid 2px #CCC;
-	}
-	.about img {
-		float: left;
-		margin-right: 10px;
-	}
-	.about p {
-		color: #777;
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 16px;
-	}
-	.wrapper .social {
-		/*float: right;*/
-		width: 543px;
-		background-color: #fff;
-		padding: 35px;
-		padding-bottom: 80px;
-		margin-top: 20px;
-		margin-left: 15px;
-	}
-	.social h3 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 20px;
-		font-weight: bold;
-		padding-bottom: 10px;
-		margin-bottom: 15px;
-		margin-top: -18px;
-		border-bottom: solid 2px #CCC;
-	}
-	.social img {
-		margin-right: 25px;
-		float: left;
-	}
-	.wrapper .contact {
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 18px;
-		color: #777;
-		width: 543px;
-		background-color: #fff;
-		margin-left: 15px;
-		padding: 35px;
-		margin-top: 30px;
-		margin-bottom: 20px;
-		/*float: left;*/
-	}
-	.contact h2 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		font-weight: bold;
-		padding-bottom: 20px;
-		margin-bottom: 25px;
-		border-bottom: solid 2px #CCC;
-	}
-	.contact input {
-		width: 543px;
-	}
-	.contact textarea {
-		width: 543px;
-	}
-	.contact input[type="submit"] {
-		border: none;
-		background-color: #4aaaa5;
-		color: #fff;
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 18px;
-		padding: 10px 5px;
-		width: 120px;
-		margin-top: 15px;
-	}
-	.contact p {
-		padding: 0px;
-		margin: 12px 0px -10px 0px;
-	}
-	.wrapper .portfolio {
-		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		font-size: 18px;
-		color: #777;
-		width: 543px;
-		background-color: #fff;
-		margin-left: 15px;
-		padding: 35px;
-		margin-top: 30px;
-		margin-bottom: 20px;
-		/*float: left;*/
-	}
-	.portfolio h2 {
-		color: #4aaaa5;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		font-size: 28px;
-		font-weight: bold;
-		padding-bottom: 20px;
-		margin-bottom: 25px;
-		border-bottom: solid 2px #CCC;
-	}
-	.portfolio .container {
-		width: 251px;
-		height: 184px;
-		float: left;
-		margin-bottom: 30px;
-		
-	}
-	.container img {
-		position: absolute;
-		width: 251px;
-		height: 184px;
-	}
-	.container .float {
-		width: 251px;
-		height: 41px;
-		background-color: #4aaaa5;
-		position: absolute;
-		margin-top: 110px;
-	}
-	.container h4 {
-		color: #fff;
-		font-family: "Times New Roman", Georgia, Serif;
-		font-size: 22px;
-		text-align: center;
-		margin-top: 9px;
-	}
-	footer {
-		clear: both;
-		background-color: #666;
-		border-top: solid 5px #4aaaa5;
-		height: 100px;
 		width: 100%;
-		padding-bottom: 100%;
-		margin-top: 30px;
+		margin-left: 0px;
 	}
-	footer p {
-		margin: 30px auto;
+	.name h1 {
+		padding-left: 0px;
 		text-align: center;
-		font-family: 'Georgia', Times, Times New Roman, serif;
-		color: #CCC;
+	}
+	.menu {
+		margin: 8px 30%;
 	}
 }
